Bug 168640 - Invisible characters in Customize - Keyboard UI (kf6-only)
Summary: Invisible characters in Customize - Keyboard UI (kf6-only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: All Linux (All)
: medium minor
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.8.0 target:26.2.0
Keywords:
Depends on:
Blocks: Qt6
  Show dependency treegraph
 
Reported: 2025-10-01 11:41 UTC by Olivier Hallot
Modified: 2026-01-26 12:08 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of dialog shows invisible characters when in dark mode (67.51 KB, image/png)
2025-10-01 11:41 UTC, Olivier Hallot
Details
Screenshot of dialog with GEN UI shows characters normally. (40.03 KB, image/png)
2025-10-01 11:43 UTC, Olivier Hallot
Details
Screenshot with 25.8.2 (21.78 KB, image/png)
2025-10-01 13:18 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2025-10-01 11:41:56 UTC
Created attachment 203079 [details]
Screenshot of dialog shows invisible characters when in dark mode

Some characters are invisible in Tools - Customize - Keyboard when in dark mode.

The shortcut just above Crtl+[ is not visible (should be ' - single quote)

The shortcut just below Crtl+] is not visible (should be } - closing brace)

Images attached shows the issue.
Comment 1 Olivier Hallot 2025-10-01 11:43:03 UTC
Created attachment 203080 [details]
Screenshot of dialog with GEN UI shows characters normally.
Comment 2 Olivier Hallot 2025-10-01 11:52:53 UTC
*** Bug 168575 has been marked as a duplicate of this bug. ***
Comment 3 m_a_riosv 2025-10-01 13:18:02 UTC
Created attachment 203082 [details]
Screenshot with 25.8.2

Not reproducible
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b86c16870251877962e986ec9d1418e1f376241f
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
and
Version: 25.8.2.1 (X86_64)
Build ID: 345526217a4027cb1b9ab39bd7153c8c141a1d64
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 V Stuart Foote 2025-10-01 13:45:27 UTC
Those characters ("'" and "}") for <Ctrl>+ keyboard shortcuts are shown for me also on Windows builds light or dark os/DE color scheme.

Linux vcl backends only? At least kf5/kf6 as from bug 168575

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6f68c46d0aa5fe872de0dec8777d35ff91886043
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 5 Buovjaga 2026-01-21 18:34:03 UTC
Only repro with kf6.

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 58da9d878db744f871072ef85f643a39e3c71a1f
CPU threads: 8; OS: Linux 6.18; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 6 Michael Weghorn 2026-01-21 21:19:39 UTC
Also reproducible with a light theme, i.e. it's not specific to dark mode.

First analysis suggests that some more cases need to be added to `QtFrame::GetKeyName`.

I plan to take a look into that.

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: d622b90e62c59409929f19c2769718dca82c76d3
CPU threads: 32; OS: Linux 6.17; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 7 Michael Weghorn 2026-01-21 22:03:17 UTC
(In reply to Michael Weghorn from comment #6)
> First analysis suggests that some more cases need to be added to
> `QtFrame::GetKeyName`.
> 
> I plan to take a look into that.

Fix pending in Gerrit:

https://gerrit.libreoffice.org/c/core/+/197776
https://gerrit.libreoffice.org/c/core/+/197777
Comment 8 Commit Notification 2026-01-22 07:47:37 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37d1b4f4737f2f318112553a12d9a1e938e2b251

tdf#168640 qt: Extract helper to get Qt key for vcl key code

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-01-22 07:47:39 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/00bd8b66367ede7ef4d60e6f62ed84db3f8abfa3

tdf#168640 qt: Map right quote and right brace keys to Qt equivalents

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Weghorn 2026-01-22 07:48:11 UTC
(In reply to Michael Weghorn from comment #7)
> Fix pending in Gerrit:
> 
> https://gerrit.libreoffice.org/c/core/+/197776
> https://gerrit.libreoffice.org/c/core/+/197777

Merged for master. Backports for 26-2 pending in Gerrit:
https://gerrit.libreoffice.org/c/core/+/197791
Comment 11 Commit Notification 2026-01-23 09:04:12 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/8c4a3f65052f71d6e8843d518b20f71bb0ea640d

tdf#168640 qt: Extract helper to get Qt key for vcl key code

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2026-01-23 09:05:15 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/ff0eebbac4c03e820485ccb7ea1f6e9f06606a09

tdf#168640 qt: Map right quote and right brace keys to Qt equivalents

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2026-01-26 11:15:29 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-26-2-0":

https://git.libreoffice.org/core/commit/7fd1b4c0bd39f2c47ce2195858c1719283d0f626

tdf#168640 qt: Extract helper to get Qt key for vcl key code

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2026-01-26 12:07:36 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-26-2-0":

https://git.libreoffice.org/core/commit/f74e33ca93436538d09ca5e316c90042e5f58b79

tdf#168640 qt: Map right quote and right brace keys to Qt equivalents

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Buovjaga 2026-01-26 12:08:16 UTC
Verified.