tdf#168640 qt: Extract helper to get Qt key for vcl key code

Extract the existing logic from QtFrame::GetKeyName
to a new separate static helper method
QtFrame::toQtKeyCode.

Change-Id: I2d61b115af0116e306853f05fdee389ffbab49d8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197776
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins